package proto;

import "tritium.proto";

message TritiumTest {
	required string script = 1;
	required string input = 2;
	required string output = 3;
	message Hash {
		required string key = 1;
		required string value = 2;
	}
	repeated Hash env_proto = 4;
	repeated Hash exports_proto = 5;
	repeated string logs = 6;
	optional Transform transformer = 7;
}
